timApp/static/stylesheets/csRun.scss
.console {
  color: #ccc;
  background: #000000;
  border: 3px double #ccc;
  padding: 10px;
  width: 95% !important;
}

p.stem {
  margin-bottom: 1em;
}

.reveal {
  .csRunChanged {
    display: none;
  }

  .csRunMenu {
    font-size: 0.1em;
  }
}

.csRunChanged {
  background-color: rgb(41, 255, 0);
  width: 0.5em;
  height: 100%;
  position: absolute;
  top: 0;
  left: -0.5em;
}

.csRunError {
  white-space: pre-wrap;
  text-align: left;
}

.showVideo {
  display: block;
  margin: 0 auto;
}

.listVideoRunDiv img {
  display: inline-block;
  width: 0.8em;
}

.smallVideoRunDiv img {
  display: inline-block;
  width: 0.8em;
}

.taunoOhje {
  font-size: 0.7em;
  margin-bottom: 1em;
}

.csRunMenu {
  margin-top: 0.9em;
}

.csPlugin {
  margin-top: 1em;
}

.pluginHide {
  text-align: right;
}

.pluginShow {
  text-align: right;
}

.unitTestGreen {
  background: #00FF00;
  width: 30%;
  margin-top: 5pt;
  height: 1.5em;
}

.unitTestRed {
  background: #FF7777;
}

.csRunDiv {
  border: solid 1px;
  border-radius: 5px;
  border-color: $csrundiv-color;
  margin: 0.3em 0 0.3em 0em;
  padding-bottom: 0.5em;
  margin-bottom: 1.5em;
  width: calc(100% - 2px);

  .csRunPre, .csRunPost {
    margin-left: 0;
    border-style: none;
    box-shadow: none;
    padding: 0;
    margin-bottom: 0;
    margin-top: 0;
    line-height: 1.1;
  }

  .csRunCode {
    border-width: 1px;
    padding: 4px;
    margin-right: 0;
    line-height: 1;
    font-size: 1em;
  }

  h2, h3, h4 {
    margin-left: 0;
  }

  h4 {
    margin-top: 0.0em;
    margin-left: 0;
    padding-left: 1em;
    padding-top: 1em;
    padding-bottom: 1em;
    background-color: $csrundiv-color;
    color: #FFF;
    font-family: "Helvetica", Arial, sans-serif;
  }

  .csRunPre, .csRunPost, .csRunArea {
    box-shadow: none;
    word-wrap: initial;
  }

  .csRunArea {
    font-family: $font-family-monospace;
    margin: 0;
    border-radius: 0;
    padding: 1px;
    line-height: 1.1;
    font-size: 0.96em;
    box-shadow: none;
    width: 100%;
    white-space: pre;
    border: 0 none;
    border-left: thin solid #0066FF;

    &:focus {
      border: 1px solid;
      border-radius: 5px;
      width: 100% !important;
    }
  }
}

.stem {
  margin-left: 0.3em;
  margin-right: 0.5em;
}

li span.stem {
    margin-left: 0px !important;
}

.csRunMenu {
  margin-left: 1.3em;
}

.csRunMenu button {
  background: $csrunmenu-button-bg-color;
  border: 0;
  border-radius: 3px;
  color: #FFF;
  display: inline-block;
  font-size: 11px;
  font-weight: bold;
  cursor: pointer;
  line-height: normal;
  padding: 8px 10px;
  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.console {
  margin-left: 0.2em;
}

.csRunMenu link, .csRunMenu :visited {
  color: $csrunmenu-link-color;
}

.csRunMenu a {
  color: $csrunmenu-link-color;
}

.csArgsArea {
  width: 90%;
  margin-top: 0;
  margin-bottom: 0;
  border: 0 none;
  border-left: thin solid #0066FF;
}

.csArgsDiv {
  width: 100%;
}

.csArgsDiv span {
  display: block;
  overflow: hidden;
  padding: 0 5px;
}

.csArgsDiv label {
  margin-left: 0;
  float: left;
  font-size: 0.96em;

}

.grconsole {
  margin-top: 0.8em !important;
  border: 1px double black;
}

.csRunChanged {
  background-color: rgb(41, 255, 0) !important;
  width: 0.2em;
  height: 100%;
  position: absolute;
  top: 0;
  left: -0.5em;
}

.csLazyPre {
    margin-left: 0.7em;
    border-left: none;
    margin-top: 0;
    padding-top: 0;
}

.sortitem {
  box-sizing: content-box;
}

.stackOutput {
    margin: 0 10px 0 10px;
}

.que.stack .matrixtable td {
    border: 0 solid black;
}


.matrixtable tbody>tr>td {
    padding-left: 0px !important;
    padding-top: 5px !important;
    padding-bottom: 4px !important;
    padding-right: 0px !important;
}

/* Styles used when questions are being attempted. */
.que.stack .stacksyntaxexample {
    color: #1f536b;
    font-family: monospace;
    font-size: 100%;
    font-weight: bold;
}
.que.stack .stackinputfeedback {
    border: 1px solid #fff;
    background-color: #fff;
    margin: 0.2em 3em 0.5em;
    padding: 0.5em 0.5em 0;
}
.que.stack .equivreasoning .stackinputfeedback {
    display: inline-block;
    margin-left: 0.5em;
    margin-right: 0;
}
.que.stack textarea {
    float: left;
    max-width: 100%;
}
.que.stack input[type=text] {
    max-width: 100%;
}
.que.stack .stackinputfeedback.empty {
    display: none;
}
.que.stack .stackinputfeedback.waiting,
.que.stack .stackinputfeedback.loading {
    color: #888;
    min-height: 1em;
}
.que.stack .stackinputfeedback.loading {
    background: #fff url([[pix:moodle|i/loading_small]]) no-repeat top right;
}
.que.stack .stackinputfeedback.waiting .stacksyntaxexample,
.que.stack .stackinputfeedback.loading .stacksyntaxexample {
    color: #84aec1;
}

.que.stack .formulation .stackprtfeedback {
    background: #fcf8e3;
    margin: 0.2em -0.2em 0.5em;
    padding: 0.2em 0.5em 0.2em 0.2em;
    display: inline-block;
}
.que.stack .formulation .stackprtfeedback .correct,
.que.stack .formulation .stackprtfeedback .partiallycorrect,
.que.stack .formulation .stackprtfeedback .incorrect {
    background: transparent;
}
.que.stack .formulation .questiontestslink {
    float: right;
    font-size: 0.7em;
    margin: -1.3em -3em;
}
.que.stack .formulation .answer .option {
    margin: 0.7em;
}

.que.stack .matrixtable {
    border: 0 solid black;
}
.que.stack .matrixtable td {
    border: 0 solid black;
}



.displayequation {
    display: block;
    text-align: left;
    margin: 0.5em 0 0.5em 2em;
}
.stack_plot {
    text-align: center;
}

.stack_plot img {
    background-color: white;
}

.stack_abstract_graph {
    background: #ffc;
    margin: 5px;
}
.stack_abstract_graph path {
    stroke-width: 3px;
    fill: none;
}
.stack_abstract_graph path.left {
    stroke: #0d0;
}
.stack_abstract_graph circle.left {
    fill: #0d0;
}
.stack_abstract_graph path.right {
    stroke: #a00;
}
.stack_abstract_graph circle.right {
    fill: #a00;
}
.stack_abstract_graph path.cross {
    stroke: #f00;
    stroke-linecap: round;
}
.stack_abstract_graph text {
    font-family: Verdana;
}
.stack_abstract_graph text.nodelabel {
    font-size: 14px;
    fill: #fff;
    alignment-baseline: middle;
    text-anchor: middle;
}
.stack_abstract_graph text.edgelabel {
    font-size: 10px;
    fill: #000;
    alignment-baseline: middle;
}
.stack_abstract_graph text.edgelabel.left {
    text-anchor: end;
}
.stack_abstract_graph text.edgelabel.right {
    text-anchor: start;
}
.stack_abstract_graph circle.node {
    fill: #00f;
}

.que.stack {
    background-color: #d9edf7;
}

.stackprtfeedback {
    background-color: #fcf8e3;
    border: 1px solid #fbeed5;
}

.stackpartmark {
    background-color: #fcf8e3;
    border: 1px solid #fbeed5;
}

.stack textarea {
    border: 1px solid black !important;
}

.stack_errors {
    text-align: left;
}

